tests/baselines/reference/scannerNumericLiteral3(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
scannerNumericLiteral3.ts(1,1): error TS1121: Octal literals are not allowed. Use the syntax '0o1'.
scannerNumericLiteral3.ts(1,3): error TS1005: ';' expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== scannerNumericLiteral3.ts (2 errors) ====
    01.0
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o1'.
      ~~
!!! error TS1005: ';' expected.